@@ -1,6 +1,7 @@
 Changes in 22.21
 ================
 	* Missing comma in fuser(1) added Debian #702391
+	* pstree uses COLUMN env variable Debian #717017
 
 Changes in 22.20
 ================
